Add events through redis
Signed-off-by: Rob Caelers <robc@krandor.org>

--- a/config/uwsgi-gevent.ini
+++ b/config/uwsgi-gevent.ini
@@ -10,6 +10,7 @@ processes = 4
 threads = 100
 max-requests = 1000
 idle = 3600
+buffer-size = 8192
 
 module = %(project).wsgi
 chdir = %(django_dir)
@@ -20,3 +21,5 @@ logto = %(deploy_dir)/logs/uwsgi.log
 pidfile = %(deploy_dir)/run/%(project).pid
 socket = %(deploy_dir)/run/uwsgi-%(project).sock
 chmod-socket = 777
+
+gevent = 100
