--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ djangorestframework
 markdown
 git+git://github.com/SiteSupport/gevent.git@1.0rc2#egg=gevent
 git+git://github.com/django/django.git@stable/1.5.x#egg=django
+pytz
